recursion.logo.koch.SquareKoch.scala.error
Compilation error:
SquareKoch:1: error: Missing closing brace `}' assumed here
def snowSquare (levels:Int, length:Double) {
^SquareKoch:1: error: expected class or object definition
def snowSquare (levels:Int, length:Double) {
^SquareKoch:14: error: expected class or object definition
def squareSide(levels:Int, length:Double) {
^